--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -14,5 +14,4 @@ parameters:
         scalarOrNull: 'null|bool|int|float|string'
         nullable: 'null|bool|int|float|string|array|object'
         parameters: 'array<string,mixed>'
-    ignoreErrors:
-        - '/bla bla bla/'
+    ignoreErrors: { }
